<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/LightToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="3dp"
            android:theme="@style/LightToolbarThemeOverlay"
            app:navigationContentDescription="@string/sim_import_cancel_content_description"
            app:navigationIcon="@drawable/ic_close_24dp"
            app:title="@string/sim_import_title_none_selected">

            <Button
                android:id="@+id/import_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/sim_import_button_text"
                />
        </android.support.v7.widget.Toolbar>


        <!-- This is managed by AccountHeaderPresenter so the IDs in this section must
             match the equivalent views in layout/editor_account_header.xml -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/account_header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:colorBackground"
            android:minHeight="48dp"
            android:orientation="horizontal"
            android:paddingEnd="32dp"
            android:paddingStart="16dp">

            <ImageView
                android:id="@+id/account_type_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="32dp"/>

            <TextView
                android:id="@+id/account_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@color/secondary_text_color"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/account_expander_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="9dp"
                android:layout_gravity="center_vertical"
                android:scaleType="center"
                android:src="@drawable/ic_arrow_drop_down_black_24dp"
                android:tint="?android:textColorSecondary"
                android:visibility="gone"/>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingTop="8dp"/>

            <android.support.v4.widget.ContentLoadingProgressBar
                android:id="@+id/loading_progress"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"/>

            <TextView
                android:id="@+id/empty_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sim_import_empty_message"
                android:textAppearance="?android:textAppearanceMedium"
                android:visibility="gone"/>

        </FrameLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
